--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,10 @@
 @import './comopnents/styles';
 
+@font-face {
+  font-family: 'Open sans';
+  src: url(/fonts/Open_Sans/OpenSans-Regular.ttf)
+}
+
 html, body, #root {
   width: 100%;
   height: 100%;
@@ -8,7 +13,7 @@ html, body, #root {
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: -apple-system, BlinkMacSystemFont, "Open sans", "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
