--- a/src/comopnents/_styles.scss
+++ b/src/comopnents/_styles.scss
@@ -1,1 +1,5 @@
 @import './Login/styles';
+@import './Footer/styles';
+@import './Header/styles';
+@import './Home/styles';
+@import './Card/styles';
