--- a/src/comopnents/App/App.scss
+++ b/src/comopnents/App/App.scss
@@ -4,6 +4,7 @@
   text-align: center;
   background-color: #f2f2f2;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
