--- a/src/comopnents/_styles.scss
+++ b/src/comopnents/_styles.scss
@@ -1,4 +1,5 @@
 @import './Login/styles';
+@import './SignUp/styles';
 @import './Footer/styles';
 @import './Header/styles';
 @import './Home/styles';
