--- a/src/comopnents/Card/_styles.scss
+++ b/src/comopnents/Card/_styles.scss
@@ -1,16 +1,22 @@
 .card {
   background-color: #fff;
   height: 70%;
-  max-width: 350px;
-  width: 100%;
+  max-height: 720px;
+  width: 30%;
   min-width: 150px;
   border-radius: 20px;
   display: inline-block;
-  margin-right: 75px;
-  margin-left: 75px;
+  margin-right: 3.333%;
+  margin-left: 3.333%;
   overflow: hidden;
+  transition: height .3s ease;
   &:last-child {
     margin-right: 0px;
+  }
+
+  &:hover {
+    height: 80%;
+    cursor: pointer;
   }
 
   .card-name {
@@ -19,24 +25,44 @@
     background-color: rgba(0, 0, 0, 0.7);
     border-radius: 20px;
     color: rgba(255, 255, 255, 0.8);
-    font-size: 68px;
+    font-size: 48px;
     text-transform: capitalize;
     word-wrap: break-word;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-start;
-    div {
+    position: relative;
+    &>div {
       margin-left: 15px;
     }
-    div:last-child {
+    &>div:last-child {
       margin-bottom: 15px;
     }
   }
 }
 
-.active {
-  height: 80%;
+.shine {
+  &:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background-color: rgba(255,255,255,0.4);
+    -webkit-transition: none;
+       -moz-transition: none;
+            transition: none;
+  }
+  &:hover:after {
+    width: 120%;
+    background-color: rgba(255,255,255,0);
+
+    -webkit-transition: all 0.5s ease-in-out;
+       -moz-transition: all 0.5s ease-in-out;
+            transition: all 0.5s ease-in-out;
+  }
 }
 
 .card-gate {
@@ -62,4 +88,41 @@
 .card-bloodmoon {
   background-image: url('/images/card-bloodmoon.jpg');
   background-position: 40% 0%;
+}
+
+.ribbon{
+  position: absolute;
+  font-size: 18px;
+}
+
+/* ribbon-active */
+.ribbon-countdown{
+  width: 100%;
+  height: 65px;
+  background: #dc143c;
+  top: 25px;
+  right: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.ribbon-new {
+  font-size: 16px;
+  font-weight: bold;
+  color: #FFF;
+  text-transform: uppercase;
+  text-align: center;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  height: 35px;
+  width: 350px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #23A6D5;
+  box-shadow: 0 3px 10px -5px rgba(0, 0, 0, 1);
+  top: 7%;
+  left: -35%;
 }
