--- a/src/comopnents/Footer/_styles.scss
+++ b/src/comopnents/Footer/_styles.scss
@@ -1,11 +1,12 @@
 #footer {
-  flex: 0.05;
   margin-top: 25px;
   justify-self: flex-end;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: 35px;
+  margin-bottom: 15px;
 
   img {
     width: 20px;
