--- a/src/comopnents/Footer/_styles.scss
+++ b/src/comopnents/Footer/_styles.scss
@@ -1,5 +1,4 @@
 #footer {
-  margin-top: 25px;
   justify-self: flex-end;
   display: flex;
   justify-content: center;
@@ -7,6 +6,16 @@
   width: 100%;
   height: 35px;
   margin-bottom: 15px;
+  background: transparent;
+  position: fixed;
+  bottom: 0;
+  color: #333;
+
+  span {
+    font-weight: bold;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
 
   img {
     width: 20px;
