--- a/src/comopnents/Login/_styles.scss
+++ b/src/comopnents/Login/_styles.scss
@@ -1,5 +1,5 @@
 #card-wrapper {
-  height: calc(100% - (25px + 15px + 35px));
+  height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -90,7 +90,7 @@
 }
 
 .card-btn {
-  background-image: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);;
+  background-image: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
   border-radius: 25px;
   height: 40px;
   text-transform: uppercase;
