--- a/src/comopnents/Card/_styles.scss
+++ b/src/comopnents/Card/_styles.scss
@@ -6,8 +6,8 @@
   min-width: 150px;
   border-radius: 20px;
   display: inline-block;
-  margin-right: 3.333%;
-  margin-left: 3.333%;
+  margin-left: 5%;
+  // margin-left: 3.333%;
   overflow: hidden;
   transition: height .3s ease;
   &:last-child {
@@ -17,6 +17,11 @@
   &:hover {
     height: 80%;
     cursor: pointer;
+  }
+
+  &.disabled {
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
   }
 
   .card-name {
@@ -46,26 +51,24 @@
   &:after {
     content: '';
     position: absolute;
-    top: 0;
-    left: 0;
+    bottom: -550px;
+    left: -550px;
     width: 0;
-    height: 100%;
+    height: 0;
+    border-radius: 100%;
     background-color: rgba(255,255,255,0.4);
-    -webkit-transition: none;
-       -moz-transition: none;
-            transition: none;
+    transition: none;
   }
   &:hover:after {
-    width: 120%;
+    width: 1500px;
+    height: 1500px;
     background-color: rgba(255,255,255,0);
-
-    -webkit-transition: all 0.5s ease-in-out;
-       -moz-transition: all 0.5s ease-in-out;
-            transition: all 0.5s ease-in-out;
+    transition: all 1.2s ease;
+    transition-delay: 0;
   }
 }
 
-.card-gate {
+.card-entrance {
   background-image: url('/images/card-gate.jpg');
   background-position: 40% 0%;
 }
