--- a/src/comopnents/Footer/_styles.scss
+++ b/src/comopnents/Footer/_styles.scss
@@ -1,8 +1,5 @@
 #footer {
   justify-self: flex-end;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 100%;
   height: 35px;
   margin-bottom: 15px;
@@ -10,6 +7,23 @@
   position: fixed;
   bottom: 0;
   color: #333;
+
+  a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+
+    &:visited {
+      color: #333;
+    }
+
+    &:hover {
+      span {
+        text-decoration: underline;
+      }
+    }
+  }
 
   span {
     font-weight: bold;
