--- a/src/comopnents/_styles.scss
+++ b/src/comopnents/_styles.scss
@@ -3,5 +3,6 @@
 @import './Footer/styles';
 @import './Header/styles';
 @import './Home/styles';
+@import './Slider/styles';
 @import './Card/styles';
 @import './NotFound/styles';
