Add about page and account page

--- a/src/comopnents/Card/_styles.scss
+++ b/src/comopnents/Card/_styles.scss
@@ -125,7 +125,7 @@
   justify-content: center;
   align-items: center;
   background: #23A6D5;
-  box-shadow: 0 3px 10px -5px rgba(0, 0, 0, 1);
+  box-shadow: 0 3px 10px -5px black;
   top: 7%;
   left: -35%;
 }
