--- a/src/comopnents/_styles.scss
+++ b/src/comopnents/_styles.scss
@@ -6,3 +6,6 @@
 @import './Slider/styles';
 @import './Card/styles';
 @import './NotFound/styles';
+@import './DropdownMenu/styles';
+@import './About/styles';
+@import './Account/styles';
