--- a/src/comopnents/About/_styles.scss
+++ b/src/comopnents/About/_styles.scss
@@ -1,13 +1,70 @@
-#about {
-  width: 50vw;
-  height: 100vh;
+#about-wrapper {
+  width: 100%;
+  height: 100%;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #fff;
-  background: linear-gradient(-90deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
+
+  #about {
+    background-color: #fff;
+    width: 50%;
+    height: 75%;
+    box-shadow: 0 3px 10px -5px black;
+    padding: 25px 25px;
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+    #title {
+      margin-bottom: 25px;
+      font-size: 36px;
+    }
+
+    #faq{
+      // margin-bottom: 15px;
+
+      a, a:visited {
+        color: #189577;
+        text-decoration: none;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+
+      .header {
+        font-size: 24px;
+        text-align: left;
+        margin-bottom: 5px;
+      }
+
+      .content {
+        text-align: left;
+        margin-bottom: 25px;
+        line-height: 20px;
+
+        .sub-content {
+          margin-bottom: 5px;
+        }
+      }
+    }
+
+    .about-link {
+      display: block;
+      text-align: left;
+      color: #189577;
+      text-decoration: none;
+
+      &:visited {
+        color: #189577;
+      }
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
 }
