--- a/src/comopnents/Header/_styles.scss
+++ b/src/comopnents/Header/_styles.scss
@@ -1,3 +1,14 @@
+@keyframes fade-in {
+  from {
+    opacity: 0;
+    top: 30px;
+  }
+  to {
+    opacity: 1;
+    top: 55px;
+  }
+}
+
 #header {
   height: 65px;
   margin-top: 0;
@@ -18,7 +29,19 @@
 
   .header-user {
     margin-right: 15px;
+    height: 100%;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &:hover {
+      cursor: pointer;
+      #dropdown {
+        display: block;
+        animation: fade-in 0.5s ease-in;
+      }
+    }
   }
 
   .header-nav {
