--- a/src/comopnents/Footer/_styles.scss
+++ b/src/comopnents/Footer/_styles.scss
@@ -13,6 +13,7 @@
     justify-content: center;
     align-items: center;
     text-decoration: none;
+    color: #333;
 
     &:visited {
       color: #333;
