--- a/src/comopnents/Header/_styles.scss
+++ b/src/comopnents/Header/_styles.scss
@@ -15,10 +15,11 @@
   justify-self: flex-start;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   background: #fff;
   width: 100%;
   box-shadow: 0px 1px 3px 1px #189577;
+  position: relative;
 
   .header-title {
     text-transform: uppercase;
@@ -34,18 +35,21 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: absolute;
+    right: 0px;
 
     &:hover {
       cursor: pointer;
       #dropdown {
         display: block;
-        animation: fade-in 0.5s ease-in;
+        animation: fade-in 0.4s ease;
       }
     }
   }
 
   .header-nav {
     margin-left: 15px;
+    position: absolute;
   }
 
 }
