--- a/src/comopnents/Login/_styles.scss
+++ b/src/comopnents/Login/_styles.scss
@@ -120,7 +120,7 @@
   justify-content: flex-end;
   align-items: center;
 
-  div > a {
+  a {
     &:hover {
       text-decoration: underline;
     }
