Add add new level screen

--- a/src/comopnents/Login/_styles.scss
+++ b/src/comopnents/Login/_styles.scss
@@ -77,6 +77,12 @@
       border-color: transparent;
     }
   }
+
+  textarea.input-form {
+    height: 110px;
+    resize: none;
+  }
+
 }
 
 @keyframes gradient {
