--- a/src/comopnents/AddLevel/_styles.scss
+++ b/src/comopnents/AddLevel/_styles.scss
@@ -5,10 +5,10 @@
   align-items: center;
 }
 
-#add-stage-form {
+#add-level-form {
   height: 90%;
   min-height: 480px;
-  width: 25%;
+  width: 35%;
   display: flex;
   flex-direction: column;
   justify-content:  space-around;
@@ -24,17 +24,15 @@
 }
 
 
-#new-stage-preview {
+#new-level-preview {
   height: 90%;
   min-height: 480px;
-  width: 45% !important;
-  display: flex;
-  flex-direction: column;
-  justify-content:  space-around;
+  width: 50% !important;
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0px 3px 10px 3px #e7e7e7;
   padding: 15px 35px;
   color: #666;
   margin-left: 15px;
+  text-align: left;
 }
