--- a/src/comopnents/SignUp/_styles.scss
+++ b/src/comopnents/SignUp/_styles.scss
@@ -22,3 +22,19 @@
     width: 100%;
   }
 }
+
+.loader{
+  border: 2px solid;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  border-color:#fff #fff #fff transparent;
+  animation: spin 2s linear infinite;
+  margin-right: 5px;
+}
+
+@keyframes spin{
+  100%{
+    transform:rotate(360deg);
+  }
+}
