Apply stage API

--- a/src/comopnents/Card/_styles.scss
+++ b/src/comopnents/Card/_styles.scss
@@ -116,6 +116,11 @@
   background-position: 40% 0%;
 }
 
+.card-vermillion {
+  background-image: url('/images/card-vermillion.jpg');
+  background-position: 70% 50%;
+}
+
 .ribbon{
   position: absolute;
   font-size: 18px;
