--- a/src/index.scss
+++ b/src/index.scss
@@ -24,3 +24,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.center-toast-body {
+  text-align: center;
+}
+
+.toast-dark {
+  background-color: #333 !important;
+}
