--- a/src/comopnents/About/_styles.scss
+++ b/src/comopnents/About/_styles.scss
@@ -1,6 +1,6 @@
 #about-wrapper {
   width: 100%;
-  height: 100%;
+  height: calc(100% - 50px);
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -10,7 +10,7 @@
   #about {
     background-color: #fff;
     width: 50%;
-    height: 75%;
+    height: 85%;
     box-shadow: 0 3px 10px -5px black;
     padding: 25px 25px;
     overflow: auto;
