--- a/src/comopnents/_styles.scss
+++ b/src/comopnents/_styles.scss
@@ -10,3 +10,5 @@
 @import './Account/styles';
 @import './AddLevel/styles';
 @import './Stage/styles';
+@import './LevelItem/styles';
+@import './TagItem/styles';
