--- a/src/comopnents/Footer/_styles.scss
+++ b/src/comopnents/Footer/_styles.scss
@@ -1,12 +1,14 @@
 #footer {
   justify-self: flex-end;
   width: 100%;
-  height: 35px;
-  margin-bottom: 15px;
+  height: 50px;
   background: transparent;
   position: fixed;
   bottom: 0;
   color: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   a {
     display: flex;
