--- a/src/comopnents/Stage/_styles.scss
+++ b/src/comopnents/Stage/_styles.scss
@@ -1,11 +1,12 @@
 #stage {
   width: 100%;
-  height: calc(100% - 60px);
+  height: 100%;
+  padding-top: 20px;
 }
 
 .stage-wrapper {
   width: 100%;
-  height: calc(100% - 50px);
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -14,7 +15,7 @@
 .stage {
   background-color: #fff;
   width: 45%;
-  height: 80%;
+  height: 70%;
   box-shadow: 0 3px 10px -5px black;
   padding: 25px 25px;
   overflow: auto;
@@ -22,6 +23,12 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+}
+
+.stage-entrance {
+  background-image: url('/images/card-gate.jpg');
+  background-size: cover;
+  filter: grayscale(50%)
 }
 
 .stage-title {
