Add basic styyling for level

--- a/src/comopnents/LevelItem/_styles.scss
+++ b/src/comopnents/LevelItem/_styles.scss
@@ -25,14 +25,14 @@
   }
 }
 
-.level-entrance.solved {
+.level-item-entrance.solved {
   border-left: 3px solid #23D5AB;
   &:hover {
     border-left-width: 6px;
   }
 }
 
-.level-highland.solved {
+.level-item-highland.solved {
   border-left: 3px solid #23d552;
   &:hover {
     border-left-width: 6px;
