--- a/src/comopnents/_styles.scss
+++ b/src/comopnents/_styles.scss
@@ -10,5 +10,6 @@
 @import './Account/styles';
 @import './AddLevel/styles';
 @import './Stage/styles';
+@import './Level/styles';
 @import './LevelItem/styles';
 @import './TagItem/styles';
