--- a/src/comopnents/Level/_styles.scss
+++ b/src/comopnents/Level/_styles.scss
@@ -1,11 +1,12 @@
 #level {
   width: 100%;
-  height: calc(100% - 60px);
+  height: 100%;
+  padding-top: 20px;
 }
 
 .level-wrapper {
   width: 100%;
-  height: calc(100% - 50px);
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -13,13 +14,27 @@
 }
 .level {
   background-color: #fff;
-  width: 50%;
-  height: 80%;
+  width: 45%;
+  height: 70%;
   box-shadow: 0 3px 10px -5px black;
   padding: 25px 25px;
   overflow: auto;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  // justify-content: space-between;
   align-items: center;
+}
+
+.level-entrance {
+  background-image: url('/images/card-gate.jpg');
+  background-size: cover;
+  filter: grayscale(60%)
+}
+
+.level-title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 25px;
+  color: #333;
+  cursor: default;
 }
