--- a/src/comopnents/Level/_styles.scss
+++ b/src/comopnents/Level/_styles.scss
@@ -28,13 +28,47 @@
 .level-entrance {
   background-image: url('/images/card-gate.jpg');
   background-size: cover;
-  filter: grayscale(60%)
+  // filter: grayscale(60%)
 }
 
 .level-title {
   font-size: 24px;
   font-weight: bold;
-  margin-bottom: 25px;
+  margin-bottom: 7.5px;
   color: #333;
   cursor: default;
+}
+
+.level-tags {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  text-transform: capitalize;
+  margin-bottom: 25px;
+}
+
+.level-section-selector {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+
+  .level-section-selector-item {
+    color: #23D5AB;
+    cursor: pointer;
+    padding: 10px;
+    transition: .3s ease;
+    &:hover, &.selected {
+      border-bottom: 1px solid #23D5AB;
+    }
+    &.selected {
+      font-weight: bold;
+    }
+  }
+
+}
+
+#level-section {
+  width: 100%;
+  height: 100%;
 }
