--- a/src/comopnents/Level/_styles.scss
+++ b/src/comopnents/Level/_styles.scss
@@ -71,4 +71,42 @@
 #level-section {
   width: 100%;
   height: 100%;
+  overflow-y: auto;
+  margin-top: 25px;
+}
+
+.level-submission {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 25px;
+
+  .level-submission-input {
+    border: 1px solid #23D5AB;
+    border-radius: 5px;
+    height: 35px;
+    padding-left: 5px;
+    width: 90%;
+  }
+
+  .level-submission-btn {
+    border: none;
+    outline: none;
+    box-shadow: none;
+    background-image: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+    border-radius: 5px;
+    height: 35px;
+    text-transform: uppercase;
+    transition: 0.5s ease;
+    transition: all 0.45s;
+    background-size: 400% 400%;
+    cursor: pointer;
+    color: #eee;
+    width: 20%;
+    margin-left: 15px;
+    &:hover {
+      animation: gradient 10s ease infinite;
+    }
+  }
 }
