--- a/src/comopnents/_styles.scss
+++ b/src/comopnents/_styles.scss
@@ -14,3 +14,9 @@
 @import './LevelItem/styles';
 @import './TagItem/styles';
 @import './Loading/styles';
+
+blockquote {
+  background: rgb(248, 248, 255);
+  padding: 1px 10px;
+  margin: 0px;
+}
