--- a/src/comopnents/Stage/_styles.scss
+++ b/src/comopnents/Stage/_styles.scss
@@ -23,6 +23,15 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+
+  @media (max-width: 1200px) {
+    width: 55%;
+  }
+
+  @media (max-width: 720px) {
+    width: 75%;
+  }
+
 }
 
 .stage-entrance {
